syntax = "proto3";	// 指定语法格式，注意 proto3 不再支持 proto2 的 required 和 optional

option go_package = "pb";

package App.Grpc.User; // 指定生成php文件的命名空间，防止命名冲突


// service 定义开放调用的服务，即 UserInfoService 微服务
service UserInfoService {
    // rpc 定义服务内的 GetUserInfo 远程调用
    rpc GetUserInfo (UserReq) returns (UserResponse);
    rpc SetUser (SetUserReq) returns (SetUserResponse);
}


// message 对应生成代码的 struct
// 定义客户端请求的数据格式
message UserReq {
	// [修饰符] 类型 字段名 = 标识符;
	string name = 1;
}


// 定义服务端响应的数据格式
message UserResponse {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    repeated string title = 4;	// repeated 修饰符表示字段是可变数组，即 slice 类型
}

message SetUserReq {
    string name = 1;
    int32 age = 2;
}

message SetUserResponse {
    int32 code = 1;
    string message = 2;
}
